added links to previous projects

--- a/index.html
+++ b/index.html
@@ -53,25 +53,33 @@
         <content id="Portfolio">
             <h3>Portfolio</h3>
             <div>
-                <figure class="run-buddy">
-                    <h4>project 1</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quas aspernatur facilis, perferendis rem velit, nihil animi enim dolore repellat quae maiores quidem placeat doloribus atque sint debitis fuga. Est!</p>
-                </figure>
+                <a href="./Portfolio-Projects/run-buddy/index.html" class="project-link">
+                    <figure class="run-buddy">
+                        <h4>Run Buddy</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quas aspernatur facilis, perferendis rem velit, nihil animi enim dolore repellat quae maiores quidem placeat doloribus atque sint debitis fuga. Est!</p>
+                    </figure>
+                </a>
 
-                <figure class="robot-gladiator">
-                    <h4>project 2</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quas aspernatur facilis, perferendis rem velit, nihil animi enim dolore repellat quae maiores quidem placeat doloribus atque sint debitis fuga. Est!</p>
-                </figure>
+                <a href="./Portfolio-Projects/robot-gladiator/index.html" class="project-link">
+                    <figure class="robot-gladiator">
+                        <h4>Robot Gladiator</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quas aspernatur facilis, perferendis rem velit, nihil animi enim dolore repellat quae maiores quidem placeat doloribus atque sint debitis fuga. Est!</p>
+                    </figure>
+                </a>
 
-                <figure class="Horiseon">
-                    <h4>project 3</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quas aspernatur facilis, perferendis rem velit, nihil animi enim dolore repellat quae maiores quidem placeat doloribus atque sint debitis fuga. Est!</p>
-                </figure>
+                <a href="./Portfolio-Projects/Heriseon/Develop/index.html" class="project-link">
+                    <figure class="Horiseon">
+                        <h4>Horiseon</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quas aspernatur facilis, perferendis rem velit, nihil animi enim dolore repellat quae maiores quidem placeat doloribus atque sint debitis fuga. Est!</p>
+                    </figure>
+                </a>
 
-                <figure class="watch-that-box">
-                    <h4>project 4</h4>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quas aspernatur facilis, perferendis rem velit, nihil animi enim dolore repellat quae maiores quidem placeat doloribus atque sint debitis fuga. Est!</p>
-                </figure>
+                <a href="./Portfolio-Projects/watch-the-box/index.html" class="project-link">
+                    <figure class="watch-that-box">
+                        <h4>project 4</h4>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quas aspernatur facilis, perferendis rem velit, nihil animi enim dolore repellat quae maiores quidem placeat doloribus atque sint debitis fuga. Est!</p>
+                    </figure>
+                </a>
             </div>
         </content>
             
