add runbuddy link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <content id="Portfolio">
             <h3>Portfolio</h3>
             <div>
-                <a href="./Portfolio-Projects/run-buddy/index.html" class="project-link">
+                <a href="https://alu1868.github.io/run-buddy/" class="project-link">
                     <figure class="run-buddy">
                         <h4>Run Buddy</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quas aspernatur facilis, perferendis rem velit, nihil animi enim dolore repellat quae maiores quidem placeat doloribus atque sint debitis fuga. Est!</p>
