added robot-gladiator link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </figure>
                 </a>
 
-                <a href="./Portfolio-Projects/robot-gladiator/index.html" class="project-link">
+                <a href="https://alu1868.github.io/robot-gladiators/" class="project-link">
                     <figure class="robot-gladiator">
                         <h4>Robot Gladiator</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quas aspernatur facilis, perferendis rem velit, nihil animi enim dolore repellat quae maiores quidem placeat doloribus atque sint debitis fuga. Est!</p>
