--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </figure>
                 </a>
 
-                <a href="./Portfolio-Projects/Horiseon/Develop/index.html" class="project-link">
+                <a href="https://alu1868.github.io/Challenge-One/" class="project-link">
                     <figure class="Horiseon">
                         <h4>Horiseon</h4>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quas aspernatur facilis, perferendis rem velit, nihil animi enim dolore repellat quae maiores quidem placeat doloribus atque sint debitis fuga. Est!</p>
