--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <!--Beginning -->
     <head>
         <meta charset="UTF-8">
-        <Title>Alex Lu's Portfolio</Title>
+        <Title>Alexander Lu's Portfolio</Title>
         <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
 
     <body>
@@ -12,7 +13,7 @@
         <!--Beginning of Header-->
         <header>
             <!--Named Header-->
-            <h1>Alex Lu</h1>
+            <h1>Alexander Lu</h1>
 
             <!--Nav Bar-->
             <nav>
@@ -41,11 +42,13 @@
 
         <!--Beginning of Bio section-->
         <article>
-            <h3 id="About-me">About me</h3>
+            <h3 id="About-me">Hey, you can call me Alex!</h3>
             <!--image of myself-->
             <div>
                 <img class="selfie" src="./assets/images/alex-lu.jpg" alt="">
-                <p class="bio">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error sapiente delectus cupiditate et tenetur numquam fugiat quas inventore culpa. Beatae rerum voluptates ea voluptatem, magni expedita perspiciatis eius! Voluptate, minus?</p>
+                <p class="bio">
+                    I'm a student front-end developer located in Austin, Texas. Currently I'm enrolled in the 6 month Coding Bootcamp provided by the University of Texas. Previously I worked in solar desgin, design electrical systems and pv solar around the greater Austin area.
+                </p>
             </div>
         </article>
 
@@ -53,33 +56,34 @@
         <content id="Portfolio">
             <h3>Portfolio</h3>
             <div>
+                <a href="https://alu1868.github.io/covid-risk-tracking-site/" class="project-highlight">
+                    <figure class="Covid-Risk-Tracking-Site">
+                        <h4 class="project-title">Covid Risk Tracking Site</h4>
+                        <p>Students were tasked to work in groups in order to develop a website using local storage and 2 server side apis</p>
+                    </figure>
+                </a>
+                
                 <a href="https://alu1868.github.io/run-buddy/" class="project-link">
                     <figure class="run-buddy">
-                        <h4>Run Buddy</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quas aspernatur facilis, perferendis rem velit, nihil animi enim dolore repellat quae maiores quidem placeat doloribus atque sint debitis fuga. Est!</p>
+                        <h4 class="project-title">Run Buddy</h4>
+                        <p>Students were tasked to demonstrate the fundamentals of HTML and CSS by recreating a fully functional webpage.</p>
                     </figure>
                 </a>
 
                 <a href="https://alu1868.github.io/robot-gladiators/" class="project-link">
                     <figure class="robot-gladiator">
-                        <h4>Robot Gladiator</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quas aspernatur facilis, perferendis rem velit, nihil animi enim dolore repellat quae maiores quidem placeat doloribus atque sint debitis fuga. Est!</p>
+                        <h4 class="project-title">Robot Gladiator</h4>
+                        <p>Students were tasked to create an in-browser web game using the fundamental skills of JavaScript.</p>
                     </figure>
                 </a>
 
                 <a href="https://alu1868.github.io/Challenge-One/" class="project-link">
                     <figure class="Horiseon">
-                        <h4>Horiseon</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quas aspernatur facilis, perferendis rem velit, nihil animi enim dolore repellat quae maiores quidem placeat doloribus atque sint debitis fuga. Est!</p>
+                        <h4 class="project-title">Horiseon</h4>
+                        <p>Students were tasked to refactor an existing website in order to be more readible to other programmers.</p>
                     </figure>
                 </a>
 
-                <a href="./Portfolio-Projects/watch-the-box/index.html" class="project-link">
-                    <figure class="watch-that-box">
-                        <h4>project 4</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus quas aspernatur facilis, perferendis rem velit, nihil animi enim dolore repellat quae maiores quidem placeat doloribus atque sint debitis fuga. Est!</p>
-                    </figure>
-                </a>
             </div>
         </content>
             
@@ -87,15 +91,18 @@
         <!--Beginning of footer section-->
         <footer id="Contact-Info">
             <!--Beginning of contact me section-->
-            <h2>Contact Info</h2><h2>|</h2>
+            <div class="row">
+                <h2 class="col-2">Contact Info</h2>
+                <h2 class="col-2">|</h2>
                 <!--Email link-->
-                <a href="mailto: alu1868@gmail.com">Email</a>
+                <a class="col-2" href="mailto: alu1868@gmail.com">Email</a>
                 <!--github link-->
-                <a href="https://github.com/alu1868">Github</a>
+                <a class="col-2" href="https://github.com/alu1868">Github</a>
                 <!--linkedin link-->
-                <a href="https://www.linkedin.com/in/alex-lu-361599228/">Linkedin</a>
+                <a class="col-2" href="https://www.linkedin.com/in/alex-lu-361599228/">Linkedin</a>
                 <!--second link to resume-->
-                <a href="./assets/alex-lu-resume.pdf">Resume</a>
+                <a class="col-2" href="./assets/alex-lu-resume.pdf">Resume</a>
+            </div>
         </footer>
     </body>
 </html>
