--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <content id="Portfolio">
             <h3>Portfolio</h3>
             <div>
-                <a href="https://alu1868.github.io/covid-risk-tracking-site/" class="project-highlight">
+                <a href="https://alu1868.github.io/covid-risk-tracking-site/" class="project-link">
                     <figure class="Covid-Risk-Tracking-Site">
                         <h4 class="project-title">Covid Risk Tracking Site</h4>
                         <p>Students were tasked to work in groups in order to develop a website using local storage and 2 server side apis</p>
