--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                     </figure>
                 </a>
                 
-                <a href="https://alu1868.github.io/run-buddy/" class="project-link">
-                    <figure class="run-buddy">
-                        <h4 class="project-title">Run Buddy</h4>
-                        <p>Students were tasked to demonstrate the fundamentals of HTML and CSS by recreating a fully functional webpage.</p>
+                <a href="https://alu1868.github.io/wizards-code/" class="project-link">
+                    <figure class="DnD-Character-Generator">
+                        <h4 class="project-title">D&D Character Generator</h4>
+                        <p>Students were tasked to work in groups in order to develop a website using backend sequelize</p>
                     </figure>
                 </a>
 
