--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </figure>
                 </a>
                 
-                <a href="https://alu1868.github.io/wizards-code/" class="project-link">
+                <a href="https://secure-temple-11568.herokuapp.com/" class="project-link">
                     <figure class="DnD-Character-Generator">
                         <h4 class="project-title">D&D Character Generator</h4>
                         <p>Students were tasked to work in groups in order to develop a website using backend sequelize</p>
