added tavern masters

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                     </figure>
                 </a>
 
-                <a href="https://alu1868.github.io/robot-gladiators/" class="project-link">
-                    <figure class="robot-gladiator">
-                        <h4 class="project-title">Robot Gladiator</h4>
-                        <p>Students were tasked to create an in-browser web game using the fundamental skills of JavaScript.</p>
+                <a href="https://tavern-masters.herokuapp.com/" class="project-link">
+                    <figure class="tavern-masters">
+                        <h4 class="project-title">Tavern-Masters</h4>
+                        <p>a Full stack MERN project that allows users to create their own one shot table top campgaigns for beginner Dungeon Masters</p>
                     </figure>
                 </a>
 
